# AI-Nurse_ScR_v6

./: .gitignore  AGENTS.md  CHANGELOG.md  Nurse-AI_ScR_v6.2.ipynb  Nurse_AI_ScR_v6_3.ipynb  README.md  colab_setup.py  config_example.yaml  extraction.py  pyproject.toml  requirements.txt
ai_nurse_scr/: __init__.py  cli.py  config.py  extraction.py  metrics.py  paths.py  pipeline.py  setup.py  spotcheck.py  utils.py
ai_nurse_scr/evaluation/: __init__.py  semantic.py
ai_nurse_scr/paperqa2/: pipeline.py  utils.py
ai_nurse_scr/paperqa2/extract/: crossref.py  grobid.py  llm.py  openalex.py  pdfmeta.py
legacy_versions/: Nurse-AI v5.3  Nurse_AI_ScR_v6_3.ipynb
notebooks/: walkthrough.ipynb
notebooks/legacy/: nurse_scr_v6_2.py
src/: cli.py  config.py  notebook_to_script.py  nurse_scr_v6_3.py  paths.py  pipeline.py  utils.py
src/paperqa2/: __init__.py  cli.py  utils.py
src/paperqa2/extract/: crossref.py  llm.py  openalex.py
tests/: test_extraction.py  test_full_pipeline.py  test_metrics.py  test_pipeline.py  test_semantic.py  test_spotcheck.py  test_utils.py
