[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-nurse-scr"
version = "0.1.0"
description = "AI Nurse Scoping Review extraction pipeline"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"

[project.scripts]
ai-nurse-scr = "ai_nurse_scr.cli:main"
